# TalentIntel

./: .env.example  .gitignore  .memory.json  .monitor_state.json  CHINESE_TALENT_OVERALL_REPORT.md  EXECUTION_REPORT.md  LESSONS_LEARNED.md  PRE_SEARCH_CHECKLIST.md  QUICKSTART.md  README.md  README_SMART_CRAWLER.md  README_v2.md  SKILL.md  TALENT_HUNT_FINAL_REPORT.md  TALENT_SEARCH_PROGRESS_REPORT.md  TEST_SUMMARY.md  __init__.py  academic_search.py  academic_talents.json  academic_talents_report.md  auto_xray_analyzer.py  benchmark_test.py  brightdata_search.py  brightdata_search_fixed.py  brightdata_search_v2.py  check_linkedin_status.py  chinese_ai_wireless_search.py  complete_linkedin_registration.py  component_test.py  coordinator.py  deep_research.py  deep_search_20260321.py  extended_search_20260321.py  extract_chinese_overseas.py  filter_chinese_ai_wireless.py  filter_wireless_ee.py  generate_action_plan.py  hourly_check.sh  intelligent_extractor.py  monitor_chinese_talent.py  (+26 more)
config/: .secrets.yaml  .secrets.yaml.template  config.yaml  extended_keywords.yaml  extended_keywords_v2.yaml  proxies.example.yaml  proxies.yaml  proxies_10.yaml  researcher.example.yaml  researcher.yaml  targets.yaml
data/: .gitignore  CLEANUP_COMPLETE_20260322.md  MIGRATION_REPORT_20260322.md  README.md  chinese_talent_summary.json  clean_candidates_db.json  clean_candidates_final.json  linkedin_search_results.json  linkedin_verification_report.json  playwright_verification_report.json  search_status_report.md  test_links.txt  unified_candidates_db.json  verification_checklist.md  verification_progress.json  verification_report.json  (+2 more)
(+1379 files in other folders)
